Fixed play button spacing

--- a/style.css
+++ b/style.css
@@ -60,9 +60,10 @@ body {
 }
 .header-image-box {
 	display: flex;
-	justify-content: center;
+	justify-content: left;
 	position: relative;
-	margin-top: -25rem
+	margin-top: -25rem;
+
 }
 .header-image {
 	width: 60%;
@@ -70,6 +71,7 @@ body {
 	margin: 5rem auto 0 auto;
 
 }
+
 .button-border {
 	z-index: 1;
 	background-color: #ffffff;
@@ -78,8 +80,8 @@ body {
 	position: absolute;
 	width: 9rem;
 	height: 9rem;
+	margin-left: 25rem;
 	border-radius: 50%;
-	margin-left: -25rem;
 	margin-top: 6rem;
 }
 .play {
